[package]
name = "pyproject-fmt"
version = "2.0.0"
description = "Format pyproject.toml files"
repository = "https://github.com/tox-dev/pyproject-fmt"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
name = "_lib"
path = "rust/src/main.rs"
crate-type = ["cdylib"]

[dependencies]
taplo = { version = "0.13.0" }
pyo3 = { version = "0.21.2", features = ["extension-module"] }

[lints.clippy]

[dev-dependencies]
rstest = { version = "0.19.0" }
