[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.25",
]

[project]
name = "pyproject-fmt-mirror"
version = "2.4.3"
description = "Format your pyproject.toml file"
readme = "README.md"
keywords = [
  "format",
  "pyproject",
]
license.file = "LICENSE.txt"
authors = [
  { name = "Bernat Gabor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pyproject-fmt==2.4.3",
]

[tool.hatch]
build.targets.wheel.bypass-selection = true

[tool.pyproject-fmt]
max_supported_python = "3.13"
